finish individual stock screen

--- a/client/index.html
+++ b/client/index.html
@@ -6,10 +6,16 @@
 
     <!-- Create a div where the graph will take place -->
     <div id="four-years"></div>
+    <div id="four-years-individual"></div>
     <div id="one-year"></div>
+    <div id="one-year-individual"></div>
     <div id="half-year"></div>
+    <div id="half-year-individual"></div>
     <div id="month"></div>
+    <div id="month-individual"></div>
     <div id="week"></div>
+    <div id="week-individual"></div>
+
     <script src="./script.js"></script>
 
     <style>
