feat(info): add diversification in percentage, edit portfolio

--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,7 @@
         --white: #ffffffff;
         */
         body {
-            background: #0A0A0AFF;
+            background: black;
         }
 
         .axis line, .axis path, .axis text{
